Fix meetups-design-layout styles

--- a/meetups-design-layout/styles/_transitions.css
+++ b/meetups-design-layout/styles/_transitions.css
@@ -1,7 +1,16 @@
+/* Transition, name=fade */
+
 .fade-enter-active,
 .fade-leave-active {
   transition: opacity 0.2s ease-in-out;
 }
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+/* Transition Group, name=fade-list */
 
 .fade-list {
   position: relative;
@@ -9,11 +18,6 @@
 
 .fade-list > * {
   transition: all 0.3s ease-out;
-}
-
-.fade-enter,
-.fade-leave-to {
-  opacity: 0;
 }
 
 .fade-list-leave-active {
